[package]
name = "apify-client"
version = "0.2.1"
authors = ["Apify Technologies <support@apify.com>"]
description = "The official Rust client for the Apify API (https://apify.com)."
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/apify/apify-client-rust"
documentation = "https://docs.rs/apify-client"
readme = "README.md"
keywords = ["apify", "api", "client", "scraping", "automation"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
